--- a/src/main/resources/templates/usersession.html
+++ b/src/main/resources/templates/usersession.html
@@ -449,7 +449,7 @@
     <div class="paragraph">
       <p>
         [[${user.firstName}]]'s Session
-        <span th:if="${param.unAuthorized}" style="color: red">
+        <span th:if="${error}" style="color: red">
           You are not authorized to access other users data!!!
         </span>
       </p>
@@ -966,7 +966,7 @@
   <div th:if="${barChartData!= null} " id="barChartDiv" class="form-container"
     style="flex-direction: column; padding-top: 10px; height: 260px"></div><!-- Pie chart will be rendered here -->
 
-  <script th:inline="javascript">
+  <script th:inline="javascript"> // this declaration allows to use Thymeleaf expressions in the script
 
     function refreshTokenExpCount() {
       fetch(`/tokens/refreshtokenexptime`)
