--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -2,11 +2,13 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 
 <head>
-  <title>mycostliving-dashboard</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet" />
-  <script src="https://kit.fontawesome.com/17e9292b04.js" crossorigin="anonymous"></script>
-  <style>
-    body {
+    <title>mycostliving-dashboard</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="./dashboard.css" type="text/css">
+    <script src="https://kit.fontawesome.com/17e9292b04.js" crossorigin="anonymous"></script>
+
+    <style>
+        body {
       font-family: "Roboto", sans-serif;
       background-color: #1c3955;
       color: #306da6;
@@ -170,92 +172,92 @@
       display: inline-block;
       margin-right: 10px;
     }
-  </style>
+    </style>
 </head>
 
 <body>
-  <div class="form-container">
+<div class="form-container">
     <h2>Admin Dashboard. /Admin user: [[${adminname}]]</h2>
     <h2></h2>
 
     <table>
-      <thead>
+        <thead>
         <tr>
-          <th>ID</th>
-          <th>First Name</th>
-          <th>Last Name</th>
-          <th>Email</th>
-          <th>Roles</th>
-          <th>Action</th>
-          <th>Asked Priviledge</th>
+            <th>ID</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+            <th>Roles</th>
+            <th>Action</th>
+            <th>Asked Priviledge</th>
         </tr>
-      </thead>
-      <tbody>
+        </thead>
+        <tbody>
         <!-- Iterate over the list of users -->
         <tr th:each="user : ${userList}">
-          <td th:text="${user.id}"></td>
-          <td th:text="${user.firstName}"></td>
-          <td th:text="${user.lastName}"></td>
-          <td th:text="${user.email}"></td>
-          <td>
-            <span th:each="authority : ${user.authorities}" th:text="${authority.getAuthority()} + '  '"></span>
-          </td>
-          <td>
+            <td th:text="${user.id}"></td>
+            <td th:text="${user.firstName}"></td>
+            <td th:text="${user.lastName}"></td>
+            <td th:text="${user.email}"></td>
+            <td>
+                <span th:each="authority : ${user.authorities}" th:text="${authority.getAuthority()} + '  '"></span>
+            </td>
+            <td>
             <span th:if="${user.isAdmin.equals(false)}">
               <form th:action="@{/admin/makeAdmin}" th:method="post">
-                <input type="hidden" th:name="userId" th:value="${user.id}" />
+                <input type="hidden" th:name="userId" th:value="${user.id}"/>
                 <button type="submit" class="elevate-button">
                   <i class="fa-solid fa-user-plus"></i>Admin
                 </button>
               </form>
             </span>
-            <span th:if="${user.isAdmin.equals(true)}">
+                <span th:if="${user.isAdmin.equals(true)}">
               <form th:action="@{/admin/removeAdmin}" th:method="post">
-                <input type="hidden" th:name="userId" th:value="${user.id}" />
+                <input type="hidden" th:name="userId" th:value="${user.id}"/>
                 <button type="submit" class="remove-button">
                   <i class="fa-solid fa-user-slash"></i>Admin
                 </button>
               </form>
             </span>
-            <span th:if="${user.isSuperUser.equals(false)}">
+                <span th:if="${user.isSuperUser.equals(false)}">
               <form th:action="@{/admin/makeSuperUser}" th:method="post">
-                <input type="hidden" th:name="userId" th:value="${user.id}" />
+                <input type="hidden" th:name="userId" th:value="${user.id}"/>
                 <button type="submit" class="elevate-button">
                   <i class="fa-solid fa-user-plus"></i>SuperUser
                 </button>
               </form>
             </span>
-            <span th:if="${user.isSuperUser.equals(true)}">
+                <span th:if="${user.isSuperUser.equals(true)}">
               <form th:action="@{/admin/removeSuperUser}" th:method="post">
-                <input type="hidden" th:name="userId" th:value="${user.id}" />
+                <input type="hidden" th:name="userId" th:value="${user.id}"/>
                 <button type="submit" class="remove-button">
                   <i class="fa-solid fa-user-slash"></i>SuperUser
                 </button>
               </form>
             </span>
-            <span>
+                <span>
               <form th:action="@{/admin/deleteUser}" th:method="post">
-                <input type="hidden" th:name="userId" th:value="${user.id}" />
+                <input type="hidden" th:name="userId" th:value="${user.id}"/>
                 <button type="submit" class="remove-button">
                   <i class="fa-solid fa-trash-can"></i>
                 </button>
               </form>
             </span>
-          </td>
-          <td>
+            </td>
+            <td>
             <span
-              th:if="${user.userAskedForSuperUser.equals(true)}"><!--To notifie the admin when a user request superuser priviledges-->
+                    th:if="${user.userAskedForSuperUser.equals(true)}"><!--To notifie the admin when a user request superuser priviledges-->
               User request for SuperUser priviledge
             </span>
-          </td>
+            </td>
         </tr>
-      </tbody>
+        </tbody>
     </table>
-  </div>
-  <form action="/logout" method="post">
+</div>
+<form action="/logout" method="post">
     <button class="button-logout" type="submit">Logout</button>
-  </form>
-  <a th:href="@{/usersession/{userId}(userId=${admin.id})}" class="button-like" style="top: 10px; right: 123px">Go
+</form>
+<a th:href="@{/usersession/{userId}(userId=${admin.id})}" class="button-like" style="top: 10px; right: 123px">Go
     back</a>
 </body>
 
