Some adjustments more. Mostly comments. Removing .css and .js from the html failed. Need to see why isn't recognizing the reference of these files into the .html file

--- a/src/main/resources/templates/usersession.html
+++ b/src/main/resources/templates/usersession.html
@@ -449,7 +449,7 @@
     <div class="paragraph">
       <p>
         [[${user.firstName}]]'s Session
-        <span th:if="${error}" style="color: red">
+        <span th:if="${param.unAuthorized}" style="color: red">
           You are not authorized to access other users data!!!
         </span>
       </p>
