--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -156,14 +156,15 @@
     <img src="/images/homepage1.gif" id="hoverGif" alt="GIF Image"/>
   </div>
   <div class="image-container-column">
-    <div class="image" style="padding-left: 630px">
+    <div class="image">
+      <span class="image" style="padding-right: 430px"> &copy; Copyright ZekyProjects</span>
       <span class="image-paragraph" style="font-size: 10px; padding-right: 10px">POWERED BY:</span>
       <span class="image-paragraph"></span><img src="/images/poweredByCC.png"/>
     </div>
     <div class="image"><img src="/images/poweredByHU.png"/></div>
     <div class="image"><img src="/images/poweredByEIA.png"/></div>
     <div class="image"><img src="/images/poweredByZCS.png"/></div>
-    <div class="icon" style="padding-left: 500px">
+    <div class="icon" style="padding-left: 460px">
       <span>
         <a class="icon" href="https://github.com/Zeky84/ss3v2finalproject" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a>
       </span>
