--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -157,7 +157,7 @@
   </div>
   <div class="image-container-column">
     <div class="image">
-      <span class="image" style="padding-right: 430px"> &copy; Copyright ZekyProjects</span>
+      <span class="image" style="padding-right: 430px">  Copyright&copy; ZekyProjects</span>
       <span class="image-paragraph" style="font-size: 10px; padding-right: 10px">POWERED BY:</span>
       <span class="image-paragraph"></span><img src="/images/poweredByCC.png"/>
     </div>
