Setting the Db credentials and APIs keys in railway

--- a/src/main/resources/templates/usersession.html
+++ b/src/main/resources/templates/usersession.html
@@ -695,9 +695,11 @@
                 th:value="${rentValues.twoBedroom}" />
               2-Bedrooms</label>
             <label style="background-color: #8fbfff; box-shadow: 0 0 6px #96b2ff"><input type="radio" name="rentType"
-                th:value="${rentValues.threeBedroom}" />3-Bedrooms</label>
+                th:value="${rentValues.threeBedroom}" />
+              3-Bedrooms</label>
             <label style="background-color: #71afff; box-shadow: 0 0 6px #86a4f8"><input type="radio" name="rentType"
-                th:value="${rentValues.fourBedroom}" />4-Bedrooms</label>
+                th:value="${rentValues.fourBedroom}" />
+              4-Bedrooms</label>
           </div>
           <div id="rentCostInfo" th:if="${rentValues} == null"
             style="padding-left: 10px; padding-top: 20px; display: none">
